# adventui

./: .gitignore  Cargo.toml  README.md  prompt.txt
src/: main.rs
src/action/: mod.rs
src/dispatcher/: mod.rs
src/game_loader/: mod.rs
src/message/: mod.rs
src/model/: game_state.rs  main_menu_state.rs  mod.rs
src/ui/: game_renderer.rs  main_menu_renderer.rs  mod.rs
