[package]
name = "adventui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.25.0", features = ["unstable-rendered-line-info"] }
reqwest = {version = "0.11.23", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9"
